--- a/task0002/css/style.css
+++ b/task0002/css/style.css
@@ -3,9 +3,10 @@
     margin: 0 auto;    /*text-align: center;*/
 }
 .display {
+    padding: 10px;
     width:300px;
 	color: #000000;
-	background-color: #CCCCCC;
+	background-color: #fff;
 	border: 1px solid #000000;
 	border-radius: 5px;
 }
