--- a/task0002/css/style.css
+++ b/task0002/css/style.css
@@ -73,6 +73,10 @@ h1{
     font-size: 0;
     position: absolute;
 }
+.img-list img {
+   width: 100%;
+   height: 300px;
+}
 .circle {
     position: absolute;
     bottom: 4px;
