--- a/task0002/css/style.css
+++ b/task0002/css/style.css
@@ -1,3 +1,4 @@
+
 .container {
     max-width: 1000px;
     margin: 0 auto;    /*text-align: center;*/
@@ -10,6 +11,57 @@
 	border: 1px solid #000000;
 	border-radius: 5px;
 }
+.navbar {
+    position: relative;
+    min-height: 50px;
+    margin-bottom: 20px;
+    border: 1px solid transparent;
+}
+#navcircle ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+#navcircle ul li {
+    display: block;
+    width: 14px !important;
+    height: 14px !important;
+    margin-bottom: 10px !important;
+    margin: 7px;
+    position: relative;
+}
+#navcircle ul li a {
+    display: block;
+    position: relative;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    text-decoration: none;
+
+}
+#navcircle ul li a span {
+    width: 14px !important;
+    height: 14px !important;
+    left: 0 !important;
+    top: 0 !important;
+    margin: 0 !important;
+    border: 1px solid #6090b6 !important;
+    background: none !important;
+
+}
+@media(max-width:768px){
+.right {
+    position: fixed;
+    z-index: 100;
+    margin-top: -32px;
+    top: 50%;
+	right: 17px;
+    opacity: 1;
+    -webkit-transform: translate3d(0,0,0);
+
+	
+}}
 .warn {
     display: none;
     background-color: #DEE8EF;
