--- a/task0002/css/style.css
+++ b/task0002/css/style.css
@@ -41,8 +41,8 @@
 
 }
 #navcircle ul li a span {
-    width: 6px !important;
-    height: 6px !important;
+    width: 14px !important;
+    height: 14px !important;
 	border-radius: 50%;
     position: absolute;
     z-index: 1;
@@ -51,6 +51,10 @@
     margin: 0 !important;
     border: 1px solid #6090b6 !important;
     background: none !important;
+
+}
+#navcircle ul li a:active span {
+background: #6090b6 !important;
 
 }
 @media(max-width:1368px){
