--- a/task0002/css/style.css
+++ b/task0002/css/style.css
@@ -16,6 +16,18 @@
     min-height: 50px;
     margin-bottom: 20px;
     border: 1px solid transparent;
+	border-radius: 4px;
+	background-color: #6090b6;
+}
+.navbarheader {
+    position: relative;
+	left: 50%;
+	top: 50%;
+	padding: 5px;
+	font-family: Billabong;
+	color: #fff;
+	font-size: 24px;
+	
 }
 #navcircle ul {
     margin: 0;
