--- a/task0002/css/style.css
+++ b/task0002/css/style.css
@@ -21,10 +21,10 @@
 	background-color: #6090b6;
 }
 .navbarheader {
-    position: absolute;
-	left: 50%;
-	margin: 0 auto;
-	padding: 5px;
+    
+	margin-left: 50%;
+	margin-right: 50%;
+	padding: 10px;
 	font-family: Billabong;
 	color: #fff;
 	font-size: 28px;
