--- a/task0002/css/style.css
+++ b/task0002/css/style.css
@@ -22,13 +22,16 @@
 }
 .navbarheader {
     
-	margin-left: 50%;
-	margin-right: 50%;
+	margin-left: auto;
+	margin-right: auto;
 	padding: 10px;
-	font-family: Billabong;
+	
+	
+}
+.navbarheader span{
+    font-family: Billabong;
 	color: #fff;
 	font-size: 28px;
-	
 }
 #navcircle ul {
     margin: 0;
