--- a/task0002/css/style.css
+++ b/task0002/css/style.css
@@ -21,9 +21,11 @@
 	background-color: #6090b6;
 }
 .navbarheader {
-    
+    margin-top: auto;
+	margin-bottom: auto;
 	margin-left: auto;
 	margin-right: auto;
+	width:140px;
 	padding: 10px;
 	
 	
@@ -32,6 +34,7 @@
     font-family: Billabong;
 	color: #fff;
 	font-size: 28px;
+	text-align: center;
 }
 #navcircle ul {
     margin: 0;
