--- a/task0002/css/style.css
+++ b/task0002/css/style.css
@@ -14,7 +14,6 @@
 .navbar {
     display: block;  
     position: relative;
-    min-height: 50px;
     margin-bottom: 20px;
     border: 1px solid transparent;
 	border-radius: 4px;
@@ -28,8 +27,8 @@
 	width:140px;
 	padding-left: auto;
 	padding-right: auto;
-	padding-top: auto;
-	padding-bottom: auto;
+	padding-top: 15px;
+	padding-bottom: 15px;
 	font-family: Billabong;
 	color: #fff;
 	font-size: 28px;
