--- a/task0002/css/style.css
+++ b/task0002/css/style.css
@@ -24,11 +24,8 @@
 	margin-bottom: auto;
 	margin-left: auto;
 	margin-right: auto;
-	width:140px;
-	padding-left: auto;
-	padding-right: auto;
-	padding-top: 15px;
-	padding-bottom: 15px;
+	width: 140px;
+	padding: 15px;
 	font-family: Billabong;
 	color: #fff;
 	font-size: 28px;
