--- a/task0002/css/style.css
+++ b/task0002/css/style.css
@@ -20,15 +20,13 @@
 	background-color: #6090b6;
 }
 .navbarheader {
-    margin-top: auto;
-	margin-bottom: auto;
 	margin-left: auto;
 	margin-right: auto;
 	width: 140px;
-	padding: 15px;
+	padding: 10px 15px 10px 15px;
 	font-family: Billabong;
 	color: #fff;
-	font-size: 28px;
+	font-size: 32px;
 	text-align: center;	
 }
 #navcircle ul {
