--- a/task0002/css/style.css
+++ b/task0002/css/style.css
@@ -24,11 +24,14 @@
 	margin-right: auto;
 	width: 140px;
 	padding: 10px 15px 10px 15px;
-	font-family: Billabong;
+	text-align: center;	
+	
+}
+.navbarheader span{
+    font-family: Billabong;
 	color: #fff;
 	font-size: 32px;
-	text-align: center;	
-	line-height: 40px;
+    vertical-align: middle;
 }
 #navcircle ul {
     margin: 0;
