--- a/task0002/css/style.css
+++ b/task0002/css/style.css
@@ -39,6 +39,16 @@
     background-color: #6090b6;
 
 }
+.displaytitle {
+    margin-left:auto;
+	margin-right:auto;
+}
+.displaytitle span {
+    color: #fff;
+    font-family: "Î¢ÈíÑÅºÚ";
+	font-weight: bold;
+	font-size: 36px;
+}
 .middle {
     display: block;
 	verticle-align: middle;
@@ -47,7 +57,6 @@
 .navbar {
     display: block;  
     position: relative;
-    margin-bottom: 20px;
     border: 1px solid transparent;
 	border-radius: 4px;
 	background-color: #6090b6;
