--- a/task0002/css/style.css
+++ b/task0002/css/style.css
@@ -51,7 +51,7 @@
 	font-size: 20px;
 
 }
-.middle .displaytitle {
+.displayzone .displaytitle {
     margin-left:auto;
 	margin-right:auto;
 	margin-top: 20px;
