--- a/task0002/css/style.css
+++ b/task0002/css/style.css
@@ -14,9 +14,12 @@
 .displayzone {
     width: 100%;
 	height: 667px;
-    z-index: 0;
-    
-}
+    z-index: 0;}
+.display board{
+    width: 470px;
+	margin-left: auto;
+	margin-right: auto;
+}   
 .displaycolor1{
     background-color: #4FC5C7;
 }
@@ -41,8 +44,9 @@
 
 }
 .displaycontent {
-    margin-left:auto;
-	margin-right:auto;
+    margin-left: auto;
+	margin-right: auto;
+	margin-bottom: auto;	
 	width: 470px;
 }
 .displaycontent span{
@@ -55,7 +59,7 @@
     position: relative;
     margin-left:auto;
 	margin-right:auto;
-	margin-top: 20px;
+	padding-top: 20px;
 	margin-bottom:25px;
 	width: 140px;
 	text-align: center;
