--- a/task0002/css/style.css
+++ b/task0002/css/style.css
@@ -19,7 +19,20 @@
     width: 470px;
 	margin-left: auto;
 	margin-right: auto;
-}   
+	text-align: center;
+}
+.displayboard span{
+    color: #fff;
+    font-family: Billabong; 
+	font-size: 36px;
+
+}
+.displayboard span a{
+    text-decoration: none;
+} 
+.displlayboard span a:hover{
+    color: #00abd8;
+}  
 .displaycolor1{
     background-color: #6090b6;
 }
@@ -42,7 +55,7 @@
 .displaycontent {
     margin-left: auto;
 	margin-right: auto;
-	margin-bottom: 15px;	
+	margin-bottom: 60px;	
 	width: 470px;
 }
 .displaycontent span{
