--- a/task0002/css/style.css
+++ b/task0002/css/style.css
@@ -30,7 +30,7 @@
 .displayboard span a{
     text-decoration: none;
 } 
-.displlayboard span a:hover{
+.displayboard span a:hover{
     color: #00abd8;
 }  
 .displaycolor1{
