--- a/task0002/css/style.css
+++ b/task0002/css/style.css
@@ -27,7 +27,7 @@
 	font-size: 36px;
     text-decoration: none;
 }
-.displayboard span a:hover{
+.displayboard a:hover{
     color: #9FE0F6;
 }  
 .displaycolor1{
