--- a/task0002/css/style.css
+++ b/task0002/css/style.css
@@ -26,9 +26,17 @@
     font-family: Billabong; 
 	font-size: 36px;
     text-decoration: none;
+	transition:0.4s ease;
+	-webkit-transition:0.4s ease;
+	-moz-transition:0.4s ease;
+	-o-transition:0.4s ease;
 }
 .displayboard a:hover{
-    color: #9FE0F6;
+    -webkit-transform:rotate(360deg) scale(2);
+	-moz-transform:rotate(360deg) scale(2);
+	-o-transform:rotate(360deg) scale(2);
+	-ms-transform:rotate(360deg) scale(2);
+	transform:rotate(360deg) scale(2);
 }  
 .displaycolor1{
     background-color: #6090b6;
