--- a/task0002/css/style.css
+++ b/task0002/css/style.css
@@ -2,6 +2,13 @@
 .container {
     max-width: 1000px;
     margin: 0 auto;    /*text-align: center;*/
+	background-color: #4FC5C7;
+}
+.contenttitle {
+    width:50px;
+	height:50px;
+	background-color: #97EC71;
+	margin-top: 20px;
 }
 .display {
     padding: 10px;
@@ -65,7 +72,13 @@
 	font-weight: bold;
 	font-size: 36px;
 }
-
+.navbar {
+    position: relative;
+    min-height: 50px;
+    border: 1px solid transparent;
+	background-color: #3a5795;
+    border-color: #3a5795;
+}
 #fullpage {
     height: 100%;
     position: relative;
