--- a/task0002/css/style.css
+++ b/task0002/css/style.css
@@ -77,6 +77,7 @@ fieldset[disabled] .btn-info.focus {
   }
 }
 .display {
+    display: none;
     padding: 10px;
     width:300px;
 	color: #000000;
@@ -141,7 +142,7 @@ fieldset[disabled] .btn-info.focus {
 /*form control*/
 .form-control {
   display: block;
-  width: 100%;
+  width: 40%;
   height: 34px;
   padding: 6px 12px;
   font-size: 14px;
@@ -271,8 +272,8 @@ textarea {
     display: block;
     margin-bottom: 10px;
 }
-.show {
-    margin-top: 10px;
+button {
+    margin-bottom: 10px;
 }
 
 body{
