--- a/task0002/css/style.css
+++ b/task0002/css/style.css
@@ -1,7 +1,7 @@
 .btn {
   display: inline-block;
   padding: 6px 12px;
-  margin-bottom: 0;
+  margin-bottom: 20px;
   font-size: 14px;
   font-weight: normal;
   line-height: 1.42857143;
@@ -130,13 +130,10 @@ fieldset[disabled] .btn-info.focus {
   }
 }
 .display {
-    display: none;
     padding: 10px;
     width:300px;
 	color: #000000;
-	background-color: #fff;
-	border: 1px solid #000000;
-	border-radius: 5px;
+	background-color: #fff;	
 }
 .displayboard{
     width: 470px;
